--- a/assembly/assembly-ide-war/src/main/webapp/WEB-INF/classes/codenvy/che.properties
+++ b/assembly/assembly-ide-war/src/main/webapp/WEB-INF/classes/codenvy/che.properties
@@ -140,3 +140,11 @@ org.everrest.asynchronous.job.timeout=10
 org.everrest.asynchronous.cache.size=1024
 # Path to asynchronous service
 org.everrest.asynchronous.service.path=/async/
+
+# OpenShift configuration
+openshift.api.endpoint=https://api.codenvy.openshift.com
+oauth.openshift.authuri=https://api.codenvy.openshift.com/oauth/authorize
+oauth.openshift.tokenuri=https://api.codenvy.openshift.com/oauth/token
+oauth.openshift.clientid=***
+oauth.openshift.clientsecret=***
+oauth.openshift.redirecturis=http://localhost:${SERVER_PORT}/che/api/oauth/callback
