--- a/assembly/assembly-machine-war/src/main/webapp/WEB-INF/classes/codenvy/che-machine-configuration.properties
+++ b/assembly/assembly-machine-war/src/main/webapp/WEB-INF/classes/codenvy/che-machine-configuration.properties
@@ -45,8 +45,10 @@ oauth.github.authuri= https://github.com/login/oauth/authorize
 #token uri
 oauth.github.tokenuri= https://github.com/login/oauth/access_token
 #redirected uris
-oauth.github.redirecturis= http://localhost:${SERVER_PORT}/che/api/oauth/callback
+oauth.github.redirecturis= http://localhost:${SERVER_PORT}/ide/api/oauth/callback
 
 git.server.uri.prefix=git
 
 project.importer.default_importer_id=git
+
+openshift.api.endpoint=https://api.codenvy.openshift.com
