--- a/core/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/core/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -88,11 +88,11 @@ undo.name = Undo
 undo.description = Undo the most recent document action.
 
 ############### Switch to left editor tab ###############################
-switch.to.left.editor.action = Previous editor
+switch.to.left.editor.action = Previous Editor
 switch.to.left.editor.action.description = Switch to previous editor tab
 
 ############### Switch to right editor tab ###############################
-switch.to.right.editor.action = Next editor
+switch.to.right.editor.action = Next Editor
 switch.to.right.editor.action.description = Switch to next editor tab
 
 ############# Key Bindings ##########
