--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -37,7 +37,7 @@
         <module>plugin-dashboard</module>
         <module>plugin-gwt</module>
         <module>plugin-python</module>
-        <module>plugin-svn</module>
+        <!--<module>plugin-svn</module>-->
         <module>plugin-cpp</module>
     </modules>
 </project>
