--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,16 @@
     <properties>
         <che.lib.version>4.2.0-RC1-SNAPSHOT</che.lib.version>
         <com.h2database.version>1.4.186</com.h2database.version>
-        <org.eclipse.persistence.version>2.5.0-RC1</org.eclipse.persistence.version>
+        <org.eclipse.persistence.version>2.6.2</org.eclipse.persistence.version>
         <specification.version>1.0-beta2</specification.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.eclipse.persistence</groupId>
+                <artifactId>javax.persistence</artifactId>
+                <version>2.1.1</version>
+            </dependency>
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
