--- a/wsmaster/che-core-api-user-impl-jpa/pom.xml
+++ b/wsmaster/che-core-api-user-impl-jpa/pom.xml
@@ -61,5 +61,14 @@
             <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
