CHE-1085 Adapt openshift plugin to use clientside resource manager
Signed-off-by: Vitaliy Guliy <vguliy@codenvy.com>

--- a/assembly/assembly-ide-war/src/main/webapp/WEB-INF/classes/codenvy/che.properties
+++ b/assembly/assembly-ide-war/src/main/webapp/WEB-INF/classes/codenvy/che.properties
@@ -149,4 +149,4 @@ oauth.openshift.authuri=https://api.codenvy.openshift.com/oauth/authorize
 oauth.openshift.tokenuri=https://api.codenvy.openshift.com/oauth/token
 oauth.openshift.clientid=***
 oauth.openshift.clientsecret=***
-oauth.openshift.redirecturis=http://localhost:${SERVER_PORT}/che/api/oauth/callback
+oauth.openshift.redirecturis=http://localhost:${SERVER_PORT}/ide/api/oauth/callback
