--- a/core/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/core/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -210,18 +210,18 @@ messages.startingMachine=Starting machine \"{0}\"
 messages.startingOperation=Starting {0}
 
 ############### Buttons ###############################
-ok = OK
-cancel = Cancel
+button.ok = OK
+button.cancel = Cancel
 search = Search
-open = Open
-next = Next
-back = Back
-close = Close
-save = Save
-apply = Apply
-refresh = Refresh
-delete = Delete
-print = Print...
+button.open = Open
+button.next = Next
+button.back = Back
+button.close = Close
+button.save = Save
+button.apply = Apply
+button.refresh = Refresh
+button.delete = Delete
+button.print = Print...
 
 projectProblem.title = Project requires configuration
 projectProblem.message = We cannot determine what type of project this is.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
