--- a/plugins/plugin-debugger/che-plugin-debugger-ide/pom.xml
+++ b/plugins/plugin-debugger/che-plugin-debugger-ide/pom.xml
@@ -75,6 +75,10 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.plugin</groupId>
+            <artifactId>che-plugin-java-ext-lang-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.plugin</groupId>
             <artifactId>che-plugin-machine-ext-client</artifactId>
         </dependency>
         <dependency>
