--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,16 @@
     <properties>
         <che.lib.version>4.3.0-RC2-SNAPSHOT</che.lib.version>
         <che.version>4.3.0-RC2-SNAPSHOT</che.version>
-        <specification.version>1.0-beta2</specification.version>
+        <com.h2database.version>1.4.186</com.h2database.version>
+        <org.eclipse.persistence.version>2.6.2</org.eclipse.persistence.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${com.h2database.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.eclipse.che</groupId>
                 <artifactId>assembly-ide-war</artifactId>
@@ -686,6 +692,22 @@
                 <groupId>org.eclipse.che.sample</groupId>
                 <artifactId>che-sample-plugin-json-shared</artifactId>
                 <version>${che.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.persistence</groupId>
+                <artifactId>eclipselink</artifactId>
+                <version>${org.eclipse.persistence.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commonj.sdo</artifactId>
+                        <groupId>org.eclipse.persistence</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.persistence</groupId>
+                <artifactId>javax.persistence</artifactId>
+                <version>2.1.1</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.che.core</groupId>
