--- a/wsmaster/pom.xml
+++ b/wsmaster/pom.xml
@@ -39,5 +39,6 @@
         <module>che-core-api-ssh</module>
         <module>che-core-api-ssh-shared</module>
         <module>wsmaster-local</module>
+        <module>che-core-api-user-impl-jpa</module>
     </modules>
 </project>
