--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -57,7 +57,8 @@
     "webpack": "^1.12.11",
     "webpack-stream": "~2.1.0",
     "wiredep": "~2.2.2",
-    "wrench": "~1.5.8"
+    "wrench": "~1.5.8",
+    "gulp-header": "1.8.2"
   },
   "engines": {
     "node": ">=0.10.0"
